--- a/app/src/main/res/layout/fragment_schedule.xml
+++ b/app/src/main/res/layout/fragment_schedule.xml
@@ -11,7 +11,9 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_shedule"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:clipToPadding="false"
+        android:paddingBottom="180dp"/>
 
 <!--    <com.github.vipulasri.timelineview.TimelineView-->
 <!--        android:id="@+id/timeline"-->
