--- a/app/src/main/res/layout/schedule_item.xml
+++ b/app/src/main/res/layout/schedule_item.xml
@@ -1,40 +1,62 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:gravity="center_vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="20dp"
-        android:orientation="vertical">
+        android:layout_marginLeft="20dp"
+        android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/tv_date"
+        <com.github.vipulasri.timelineview.TimelineView
+            android:id="@+id/timeline"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/josefinsansregular"
-            android:text="date"/>
+            android:layout_height="match_parent"
+            app:markerSize="20dp"
+            app:lineWidth="2dp"
+            app:startLineColor="@color/teal_200"
+            app:endLineColor="@color/teal_200"/>
 
-        <TextView
-            android:id="@+id/tv_day"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/josefinsansregular"
-            android:text="day"/>
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="20dp">
 
-        <TextView
-            android:id="@+id/tv_mr_info"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/josefinsansregular"
-            android:text="info"/>
 
-<!--        <TextView-->
-<!--            android:id="@+id/tv_en_info"-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:fontFamily="@font/josefinsansregular"-->
-<!--            android:text="en info"/>-->
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="20dp"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/tv_date"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/josefinsansregular"
+                    android:text="date"/>
+
+                <TextView
+                    android:id="@+id/tv_day"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/josefinsansregular"
+                    android:text="day"/>
+
+                <TextView
+                    android:id="@+id/tv_mr_info"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/josefinsansregular"
+                    android:text="info"/>
+            </LinearLayout>
+
+
+
+    </androidx.cardview.widget.CardView>
+
     </LinearLayout>
 </FrameLayout>
