--- a/app/src/main/res/layout/schedule_item.xml
+++ b/app/src/main/res/layout/schedule_item.xml
@@ -14,18 +14,16 @@
             android:id="@+id/timeline"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            app:markerSize="20dp"
-            app:lineWidth="2dp"
-            app:startLineColor="@color/teal_200"
-            app:endLineColor="@color/teal_200"/>
+            app:startLineColor="@color/schedule"
+            app:endLineColor="@color/schedule"
+            app:marker="@drawable/marker"
+            app:markerSize="15dp"
+            app:lineWidth="2dp"/>
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="20dp">
-
-
-
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -33,29 +31,21 @@
                 android:orientation="vertical">
 
                 <TextView
+                    android:id="@+id/tv_info"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="20sp"
+                    android:fontFamily="@font/josefinsansregular"
+                    android:text="info"/>
+
+                <TextView
                     android:id="@+id/tv_date"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
                     android:fontFamily="@font/josefinsansregular"
                     android:text="date"/>
-
-                <TextView
-                    android:id="@+id/tv_day"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:fontFamily="@font/josefinsansregular"
-                    android:text="day"/>
-
-                <TextView
-                    android:id="@+id/tv_mr_info"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:fontFamily="@font/josefinsansregular"
-                    android:text="info"/>
             </LinearLayout>
-
-
-
     </androidx.cardview.widget.CardView>
 
     </LinearLayout>
