--- a/app/src/main/res/layout/fragment_schedule.xml
+++ b/app/src/main/res/layout/fragment_schedule.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/background"
-    tools:context=".fragment.ScheduleFragment"
+    tools:context="io.ak.pesgm.fragment.ScheduleFragment"
     tools:ignore="Overdraw">
 
     <androidx.recyclerview.widget.RecyclerView
