--- a/app/src/main/res/layout/collection_item.xml
+++ b/app/src/main/res/layout/collection_item.xml
@@ -17,7 +17,7 @@
                 android:id="@+id/iv_collection"
                 android:layout_width="match_parent"
                 android:src="@mipmap/ic_launcher"
-                android:layout_height="wrap_content" />
+                android:layout_height="155dp" />
 
             <TextView
                 android:id="@+id/tv_year"
