--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,4 +15,5 @@
     <color name="home">#DC776C</color>
     <color name="schedule">#673AB7</color>
     <color name="settings">#2ecc71</color>
+    <color name="footer">#5C5B5B</color>
 </resources>
