--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -1,37 +1,58 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/gray_scale"
     tools:context="io.ak.pesgm.SplashActivity">
+
+
+    <ImageView
+        android:id="@+id/ivBappa"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@id/tv_title"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="10dp"
+        android:src="@drawable/bappa" />
+
+    <TextView
+        android:id="@+id/tv_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="140dp"
+        android:fontFamily="@font/amsmanthan"
+        android:textSize="30sp"
+        android:text="@string/title" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp"
         android:layout_alignParentBottom="true"
-        android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="parent">
-
+        android:orientation="vertical">
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
             android:gravity="center_horizontal"
-            android:text="made with \u2764 for bappa"
-            android:textColor="@color/teal_700"
-            android:textSize="20sp" />
+            android:textSize="20sp"
+            android:layout_alignParentBottom="true"
+            android:textColor="@color/footer"
+            android:text="made with \u2764 for bappa" />
 
         <TextView
             android:id="@+id/appversion"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
             android:gravity="center_horizontal"
-            android:text="V 1.0.0"
-            android:textColor="@color/teal_700"
-            android:textSize="18sp" />
+            android:textSize="18sp"
+            android:layout_alignParentBottom="true"
+            android:textColor="@color/footer"
+            android:text="V 1.0.0" />
 
     </LinearLayout>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+</RelativeLayout>
