--- a/app/src/main/res/layout/activity_year_detail.xml
+++ b/app/src/main/res/layout/activity_year_detail.xml
@@ -6,14 +6,14 @@
     android:layout_height="match_parent"
     tools:context=".YearDetailActivity">
 
-    <ScrollView
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
+    <androidx.core.widget.NestedScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:fillViewport="true">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:orientation="vertical">
 
             <androidx.cardview.widget.CardView
@@ -43,9 +43,7 @@
                         android:layout_marginLeft="10dp"
                         android:src="@drawable/ic_baseline_arrow_back_ios_new_24"/>
 
-
                 </RelativeLayout>
-
             </androidx.cardview.widget.CardView>
 
 
@@ -85,31 +83,18 @@
                         android:textSize="18sp"
                         android:textColor="@color/white"
                         android:text="" />
-
                 </androidx.appcompat.widget.LinearLayoutCompat>
-
             </androidx.cardview.widget.CardView>
 
-            <androidx.cardview.widget.CardView
-                android:id="@+id/cv_features_images"
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rv_features_images"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:cardCornerRadius="15dp"
-                android:elevation="10dp"
-                android:layout_margin="10dp">
-
-                <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/rv_features_images"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:columnCount="2"
-                    android:padding="10dp"
-                    android:rowCount="4"/>
-
-            </androidx.cardview.widget.CardView>
+                android:columnCount="2"
+                android:padding="10dp"
+                android:rowCount="4"/>
 
         </LinearLayout>
-
-    </ScrollView>
+    </androidx.core.widget.NestedScrollView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
