--- a/app/src/main/res/layout/features_image_item.xml
+++ b/app/src/main/res/layout/features_image_item.xml
@@ -4,14 +4,16 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_margin="10dp"
+    android:layout_margin="5dp"
     app:cardElevation="5dp"
-    app:cardCornerRadius="8dp">
+    app:cardBackgroundColor="#2ecc71"
+    app:cardCornerRadius="55dp">
 
     <ImageView
         android:id="@+id/iv_collection"
         android:layout_width="match_parent"
         android:src="@mipmap/ic_launcher"
-        android:layout_height="155dp" />
+        android:scaleType="centerCrop"
+        android:layout_height="125dp" />
 
 </androidx.cardview.widget.CardView>
