--- a/app/src/main/res/layout/activity_year_detail.xml
+++ b/app/src/main/res/layout/activity_year_detail.xml
@@ -6,7 +6,8 @@
     android:layout_height="match_parent"
     tools:context=".YearDetailActivity">
 
-    <androidx.core.widget.NestedScrollView
+    <io.ak.pesgm.utils.CustomNestedScrollView
+        android:id="@+id/cs_nested_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:fillViewport="true">
@@ -28,7 +29,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
 
-                    <io.ak.pesgm.utils.TouchImageView
+                    <com.ortiz.touchview.TouchImageView
                         android:id="@+id/iv_detail_pic"
                         android:layout_width="match_parent"
                         android:layout_height="500dp"
@@ -95,6 +96,6 @@
                 android:rowCount="4"/>
 
         </LinearLayout>
-    </androidx.core.widget.NestedScrollView>
+    </io.ak.pesgm.utils.CustomNestedScrollView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
