--- a/app/src/main/res/layout/activity_year_detail.xml
+++ b/app/src/main/res/layout/activity_year_detail.xml
@@ -44,6 +44,15 @@
                         android:layout_marginLeft="10dp"
                         android:src="@drawable/ic_baseline_arrow_back_ios_new_24"/>
 
+                    <ImageView
+                        android:id="@+id/iv_download"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="15dp"
+                        android:layout_marginRight="10dp"
+                        android:layout_alignParentRight="true"
+                        android:src="@drawable/ic_baseline_file_download_24"/>
+
                 </RelativeLayout>
             </androidx.cardview.widget.CardView>
 
